--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "mailparser": "^3.7.3",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
-    "nodemailer": "^7.0.3",
+    "nodemailer": "6.9.11",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
