--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "googleapis": "^150.0.1",
-    "imapflow": "^1.0.188",
+    "imapflow": "1.0.170",
     "lucide-react": "^0.515.0",
-    "mailparser": "^3.7.3",
+    "mailparser": "3.6.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "nodemailer": "6.9.11",
