--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "drizzle-orm": "^0.44.2",
     "googleapis": "^150.0.1",
     "imapflow": "1.0.170",
+    "ioredis": "^5.6.1",
     "lucide-react": "^0.515.0",
     "mailparser": "3.6.0",
     "next": "15.3.3",
