--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/nodemailer": "^6.4.17",
     "@types/qrcode": "^1.5.5",
+    "@upstash/redis": "^1.35.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -37,7 +38,6 @@
     "drizzle-orm": "^0.44.2",
     "googleapis": "^150.0.1",
     "imapflow": "1.0.170",
-    "ioredis": "^5.6.1",
     "lucide-react": "^0.515.0",
     "mailparser": "3.6.0",
     "next": "15.3.3",
