--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "googleapis": "^150.0.1",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/cookie": "^0.6.0",
     "@types/mailparser": "^3.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
